Set original log_format

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,10 +1,15 @@
-server {
-	root /var/www/html;
+log_format oda '$remote_addr - $remote_user [$time_local] "$request" '
+				'$status $body_bytes_sent "$http_referer" '
+				'"$http_user_agent" "$http_x_forwarded_for" "$request_body"';
 
-	access_log /var/log/nginx/access.log main;
-	error_log /var/log/nginx/error.log debug;
+
+server {
+
+	access_log /var/www/html/logs/access.log oda;
+	error_log /var/www/html/logs/error.log debug;
 
 	location / {
+		root /var/www/html;
 		index index.html;
 	}
 }
